@@ -2,9 +2,11 @@ gtksourceview/gtksourcebuffer.c
 gtksourceview/gtksourcecontextengine.c
 gtksourceview/gtksourcelanguagemanager.c
 gtksourceview/gtksourcelanguage-parser-2.c
+gtksourceview/gtksourcestyle.c
 gtksourceview/gtksourcestylemanager.c
 gtksourceview/gtksourcestylescheme.c
 gtksourceview/gtksourceview.c
+gtksourceview/gtksourceview-i18n.c
 gtksourceview/language-specs/ada.lang
 gtksourceview/language-specs/boo.lang
 gtksourceview/language-specs/changelog.lang
