@@ -1,3 +1,9 @@
+2007-06-20  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/gtksourceview-i18n.c (_gtksourceview_gettext):
+	added "translator-credits" string.
+	* po/POTFILES.in: added gtksourcestyle.c and gtksourceview-i18n.c.
+
 2007-06-19  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	The library is LGPL now.
